frontend/rbac_cleaned_4.log

Running 3 tests using 1 worker

[1A[2K[1/3] [chromium] ??? tests\e2e\rbac-map-flow.spec.ts:13:9 ??? RBAC & Map Flow Tests ??? Host: Create Listing with Map
[1A[2K[chromium] ??? tests\e2e\rbac-map-flow.spec.ts:13:9 ??? RBAC & Map Flow Tests ??? Host: Create Listing with Map
BROWSER LOAD [info]: %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold

[1A[2KBROWSER LOAD [log]: [HMR] connected

[1A[2KBROWSER LOAD [info]: %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold

[1A[2KBROWSER LOAD [log]: [HMR] connected

[1A[2KBROWSER LOAD [info]: %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold

[1A[2KBROWSER LOAD [log]: [HMR] connected

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 107ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 106ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 107ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 123ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 107ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 107ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 121ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 135ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 137ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 106ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 105ms

[1A[2KSelected Location: 26.947132203448643, 88.30523650372422

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 107ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 137ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2KBROWSER LOAD [log]: [Fast Refresh] done in 2647ms

[1A[2KBROWSER LOAD [log]: [Fast Refresh] rebuilding

[1A[2K  1) [chromium] ??? tests\e2e\rbac-map-flow.spec.ts:13:9 ??? RBAC & Map Flow Tests ??? Host: Create Listing with Map 

    SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON

      89 |         });
      90 |
    > 91 |         const listings = await listingsRes.json();
         |                          ^
      92 |         const myStay = listings.find((h: any) => h.name === homestayName);
      93 |
      94 |         if (myStay) {
        at C:\Users\biswa\OneDrive\Documents\github\NorthBengalHomestays\frontend\tests\e2e\rbac-map-flow.spec.ts:91:26

    Error Context: test-results\e2e-rbac-map-flow-RBAC-Map-f1169-ost-Create-Listing-with-Map-chromium\error-context.md

    attachment #2: trace (application/zip) ???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
    test-results\e2e-rbac-map-flow-RBAC-Map-f1169-ost-Create-Listing-with-Map-chromium\trace.zip
    Usage:

        npx playwright show-trace test-results\e2e-rbac-map-flow-RBAC-Map-f1169-ost-Create-Listing-with-Map-chromium\trace.zip

    ????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????


[1A[2K[2/3] [chromium] ??? tests\e2e\rbac-map-flow.spec.ts:104:9 ??? RBAC & Map Flow Tests ??? Guest: Read-Only Map & Permissions
[1A[2K[3/3] [chromium] ??? tests\e2e\rbac-map-flow.spec.ts:126:9 ??? RBAC & Map Flow Tests ??? Admin: Override Delete
[1A[2K  1 failed
    [chromium] ??? tests\e2e\rbac-map-flow.spec.ts:13:9 ??? RBAC & Map Flow Tests ??? Host: Create Listing with Map 
  2 did not run
